--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "mongodb": "^4.5.0",
     "qrcode": "^1.5.0"
   }
 }
