--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,12 @@
   },
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.17.3",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "mongodb": "^4.5.0",
+    "qrcode": "^1.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
