--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
+    "bootstrap": "^5.1.3",
+    "react-bootstrap": "^2.2.3",
     "react-router-dom": "^5.2.0"
   }
 }
